[package]
name = "keyplace_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version= "0.8 ", features = ["serde", "v4"] } 
keyplace = "0.1.1"
actix-cors = "0.5.4"